# agregat

./: CHANGELOG.md  README  agregat.cabal
app/: FileParser.hs  Main.hs
lib/: Agregat.hs
lib/Agregat/: IPRange.hs  V4.hs  V6.hs
tests/: Test.hs
