cabal-version:      2.4
name:               agregat
version:            0.1.0.0
synopsis: Aggregate ip ranges

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            GPL-3.0-or-later

author:             Lars Kriesten
maintainer:         code@zral.net

copyright: 2022 Lars Kriesten
-- category:
extra-source-files: CHANGELOG.md

library
    ghc-options: -Wall -Werror -O2
    exposed-modules: Agregat
    other-modules: Agregat.V4
                   Agregat.V6
    hs-source-dirs: lib
    build-depends: attoparsec
                 , base >= 4.13
                 , groupBy
                 , ip
                 , text
    default-language: Haskell2010


test-suite agregat-test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    other-modules:
    hs-source-dirs: tests
    build-depends: agregat
                 , base >= 4.13
                 , ip
                 , tasty >= 0.11 && <1.5
                 , tasty-hspec
                 , hspec
    default-language: Haskell2010


executable agregat
    main-is:          Main.hs
    ghc-options: -Wall -Werror -O2

    -- Modules included in this executable, other than Main.
    other-modules: FileParser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: agregat
                 , attoparsec
                 , base >=4.13
                 , optparse-applicative
                 , ip
                 , text
    hs-source-dirs:   app
    default-language: Haskell2010
